# LoginLogBook

./: .gitignore  CLAUDE.md  LICENSE  README.md
loginlogbook-api/: .env.example  DOCKERHUB.md  Dockerfile  docker-compose.example.yml  docker-compose.yml  pyproject.toml
loginlogbook-api/app/: auth.py  branding_store.py  client_store.py  config.py  errors.py  i18n.py  influx.py  logo_store.py  main.py  models.py  reasons_store.py  settings_store.py
loginlogbook-api/nginx/: nginx.conf  nginx.dev.conf
loginlogbook-api/scripts/: build_dashboards.py  certs-init.sh  deploy-hook.sh  init-letsencrypt.sh
loginlogbook-api/tests/: conftest.py  test_admin.py  test_auth.py  test_branding.py  test_build_dashboards.py  test_clients.py  test_error_pages_static.py  test_errors.py  test_events.py  test_health.py  test_i18n.py  test_influx_unit.py  test_integration_influx.py  test_locale_parity.py  test_rate_limit.py  test_reasons.py  test_settings_routes.py  test_settings_store.py  test_tls_certbot_config.py
loginlogbook-client/: loginlogbook-client.spec  pyproject.toml
loginlogbook-client/app/: __main__.py  api_client.py  cache.py  config.py  event_queue.py  i18n.py  models.py  platform_linux.py  platform_utils.py  platform_win32.py
loginlogbook-client/autostart/: loginlogbook-client.desktop
loginlogbook-client/tests/: conftest.py  test_api_client.py  test_api_client_settings.py  test_button_states.py  test_cache.py  test_config.py  test_event_queue.py  test_footer_bar.py  test_i18n.py  test_locale_parity.py  test_platform_utils.py  test_reason_filter.py  (+1 more)
(+60 files in other folders)
