[project]
name = "loginlogbook-api"
version = "0.1.0"
description = "Central backend for LoginLogBook: reasons, logo, and login/logout events."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "influxdb-client>=1.43",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
